[project]
name = "landlynk-worker"
version = "0.1.0"
description = "Geographic Intelligence Engine geospatial and data worker."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Type hints on public functions, sensible defaults. See house-standards.md.
select = ["E", "F", "I", "UP", "B", "ANN"]
# black owns line length, so E501 is left to the formatter rather than the linter.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
